simple NGINX hosting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,19 @@ services:
     build: .
     volumes:
        - .:/code
-    ports:
-       - 8000:8000
+    expose:
+       - 8000
     command: python /code/mysite/manage.py runserver 0.0.0.0:8000
+
+  nginx:
+    restart: always
+    build: ./nginx/
+    depends_on:
+      - web
+    ports:
+      - "80:80"
+    #  - "443:443"
+#     volumes:
+#        - ./mysite/myapp/static:/static
+    links:
+      - web:web
